Moving script in a folder.

--- a/internship/index.html
+++ b/internship/index.html
@@ -15,7 +15,7 @@ title: Cyril MOINEAU
 		<h2 id="irisa">Internship in the team SHAMAN of the IRISA 2020</h2>
 		<h3>Description of the internship :</h3>
 		<p>
-			As part of my final year internship, I worked at <a href="http://www.irisa.fr/"></a>'IRISA</a>'s laboratory in the team <a href="http://www-shaman.irisa.fr/">SHAMAN</a>.
+			As part of my final year internship, I worked at <a href="http://www.irisa.fr/"></a>IRISA</a>'s laboratory in the team <a href="http://www-shaman.irisa.fr/">SHAMAN</a>.
 			The goal of the internship was to improve a method to generate linguistic summaries of a big database.
 			A linguistic summary is a set of fuzzy properties such as "most crow are black".
 			To generate such a summary, the classic approach requires to go through the whole database, which results in a linear complexity depending of the size of the database. 
