Removing arrows to navigate.

--- a/fr/index.html
+++ b/fr/index.html
@@ -4,8 +4,8 @@ title: Cyril MOINEAU
 ---
 	<div class="blurb">
 		<div id="presentation">
-		<img src="/ressources/Cyril.jpg" alt="A photo of me"  style="float:right; width: 8em; height: 9.5em; margin-left: 30px; margin-right: 15%; border-radius: 5%; box-shadow: 2px 0px 6px black;">
-		<h1 style="float: left;">Cyril MOINEAU</h1>
+			<img src="/ressources/Cyril.jpg" alt="A photo of me"  style="float:right; width: 8em; height: 9.5em; margin-left: 30px; margin-right: 15%; border-radius: 5%; box-shadow: 2px 0px 6px black;">
+			<h1 style="float: left;">Cyril MOINEAU</h1>
 		</div>
 		<div id="flex-container">
 			<div id="wai">
@@ -23,112 +23,93 @@ title: Cyril MOINEAU
 					En parallèle, je prépare aussi un second diplôme orienté vers la recherche en informatique à <a href="https://www.univ-rennes1.fr/">l'Université de Rennes 1</a>. Je suis actuellement en stage de fin d'étude dans l'équipe <a href="http://www-shaman.irisa.fr/">Shaman</a> de l'IRISA, sous la supervision de mon maître de stage <a href="http://people.irisa.fr/Gregory.Smits/"> Gregory Smits</a>.
 				</p>
 			</div>
-
 		</div>
 
 		<h2>Formation</h2>
-		<h3>Master Recherche en informatique Rennes 1 (2019-2020) 
-			<i id="1_show" class="fa fa-arrow-circle-down" aria-hidden="true" onclick="document.getElementById('msif').style.display='block';document.getElementById('1_hide').style.display='initial';document.getElementById('1_show').style.display='none';"></i> 
-
-			<i id="1_hide" class="fa fa-arrow-circle-up" aria-hidden="true" onclick="document.getElementById('msif').style.display='none';document.getElementById('1_hide').style.display='none';document.getElementById('1_show').style.display='initial';" style="display:none;"></i></h3>
-			<div id="msif" style="display:none;">
-				<ul>
-					<li>Fouille de données massives et visualisation</li>
-					<li>Analyse de données et modélisation probabilistique</li>
-					<li>Rédaction d'article scientifique</li>
-				</ul>
-			</div>
-			<h3>ENSSAT école d'ingénieur (2017-2020) 
-			<i id="2_show" class="fa fa-arrow-circle-down" aria-hidden="true" onclick="document.getElementById('enssat').style.display='block';document.getElementById('2_hide').style.display='initial';document.getElementById('2_show').style.display='none';"></i> 
-
-			<i id="2_hide" class="fa fa-arrow-circle-up" aria-hidden="true" onclick="document.getElementById('enssat').style.display='none';document.getElementById('2_hide').style.display='none';document.getElementById('2_show').style.display='initial';" style="display:none;"></i></h3>
-			<div id="enssat" style="display:none;">
-				<ul>
-					<li><strong>Mathématiques :</strong>
-						<ul>
-							<li>Logique Mathématiques</li>
-							<li>Analyse</li>
-							<li>Algèbre</li>
-							<li>Analyse discrète et continue</li>
-							<li>Probabilités</li>
-							<li>Statistiques</li>
-							<li>Théorie des files d'attente</li>
-							<li>Cryptographie</li>
-						</ul>
-					<li><strong>Informatique :</strong>
-						<ul>
-							<li>Réseaux</li>
-							<li>Système d'exploitation</li>
-							<li>Bases de C</li>
-							<li>Bases de Java</li>
-							<li>Algorithmique</li>
-							<li>Structure de données</li>
-							<li>Programmation objet</li>
-							<li>Génie logiciel</li>
-							<li>Temps réel</li>
-							<li>Algorithmes distribués</li>
-							<li>Programmation Unix</li>
-							<li>Bases de données relationnelles</li>
-							<li>Bases de données avancées (logique floue)</li>
-							<li>Théorie des langages et compilation</li>
-							<li>Calculabilité</li>
-							<li>Programmation web Client / Serveur</li>
-							<li>Services Web</li>
-							<li>Sécurité des systèmes logiciel</li>
-							<li>Porgrammation déclarative et fonctionnelle</li>
-							<li>Apprentissage Automatique</li>
-							<li>Web Data Management</li>
-							<li>Analyse et fouille de données massives (web sémantique)</li>
-							<li>Traitement automatique du langage et de la parole</li>
-						</ul>
-					<li><strong>Electronique :</strong>
-						<ul>
-							<li>Micro-contrôleurs</li>
-							<li>Bases des systèmes  numériques</li>
-						</ul>
-				</ul>
-			</div>
-				<h3>Classe préparatoire (2015-2017) 
-			<i id="3_show" class="fa fa-arrow-circle-down" aria-hidden="true" onclick="document.getElementById('prep').style.display='block';document.getElementById('3_hide').style.display='initial';document.getElementById('3_show').style.display='none';"></i> 
-
-			<i id="3_hide" class="fa fa-arrow-circle-up" aria-hidden="true" onclick="document.getElementById('prep').style.display='none';document.getElementById('3_hide').style.display='none';document.getElementById('3_show').style.display='initial';" style="display:none;"></i></h3>
-			<div id="prep" style="display:none;">
-				<p>
-					J'ai étudié dans une classe préparatoire française de 2015-2017. Vous pourrez trouver le programme détaillé que j'ai trouvé <a href='https://www.optimalsupspe.fr/pc/'>ici</a>.
-				</p>
-				<ul>
-					<li><strong>Mathematiques :</strong></li>
-						<ul>
-							<li>Algèbre linéaire</li>
-							<li>Espace vectoriel normé en dimensions finies</li>
-							<li>Espace Euclidien</li>
-							<li>Fonctions vectorielles et arcs paramétrés</li>
-							<li>Probabilités</li>
-							<li>Calcul différentiel</li>
-						</ul>
-					<li><strong>Physique :</strong></li>
-						<ul>
-							<li>Optique non linéaire</li>
-							<li>Électromagnétisme</li>
-							<li>Mécanique</li>
-							<li>Thermodynamique</li>
-							<li>Physique des ondes</li>
-						</ul>
-					<li><strong>Chimie :</strong></li>
-						<ul>
-							<li>Mélanges et transformations: aspects thermodynamiques</li>
-							<li>Énergie chimique et énergie électrique: conversion et stockage</li>
-							<li>Atomes, molécules, complexes: modélisation quantique et réactivité</li>
-							<li>Molécules et matériaux organiques : stratégies de synthèse et applications</li>
-						</ul>
-					<li><strong>Informatique :</strong></li>
-						<ul>
-							<li>Introduction à Python</li>
-							<li>Introduction aux bases de données (mySQL)</li>
-							<li>Modélisation physique</li>
-							<li>Programmation récursive</li>
-						</ul>
-    		</ul>
-	</div>
+		<h3>Master Recherche en informatique Rennes 1 (2019-2020)</h3>
+			<ul>
+				<li>Fouille de données massives et visualisation</li>
+				<li>Analyse de données et modélisation probabilistique</li>
+				<li>Rédaction d'article scientifique</li>
+			</ul>
+		<h3>ENSSAT école d'ingénieur (2017-2020)</h3>
+			<ul>
+				<li><strong>Mathématiques :</strong>
+					<ul>
+						<li>Logique Mathématiques</li>
+						<li>Analyse</li>
+						<li>Algèbre</li>
+						<li>Analyse discrète et continue</li>
+						<li>Probabilités</li>
+						<li>Statistiques</li>
+						<li>Théorie des files d'attente</li>
+						<li>Cryptographie</li>
+					</ul>
+				<li><strong>Informatique :</strong>
+					<ul>
+						<li>Réseaux</li>
+						<li>Système d'exploitation</li>
+						<li>Bases de C</li>
+						<li>Bases de Java</li>
+						<li>Algorithmique</li>
+						<li>Structure de données</li>
+						<li>Programmation objet</li>
+						<li>Génie logiciel</li>
+						<li>Temps réel</li>
+						<li>Algorithmes distribués</li>
+						<li>Programmation Unix</li>
+						<li>Bases de données relationnelles</li>
+						<li>Bases de données avancées (logique floue)</li>
+						<li>Théorie des langages et compilation</li>
+						<li>Calculabilité</li>
+						<li>Programmation web Client / Serveur</li>
+						<li>Services Web</li>
+						<li>Sécurité des systèmes logiciel</li>
+						<li>Porgrammation déclarative et fonctionnelle</li>
+						<li>Apprentissage Automatique</li>
+						<li>Web Data Management</li>
+						<li>Analyse et fouille de données massives (web sémantique)</li>
+						<li>Traitement automatique du langage et de la parole</li>
+					</ul>
+				<li><strong>Electronique :</strong>
+					<ul>
+						<li>Micro-contrôleurs</li>
+						<li>Bases des systèmes  numériques</li>
+					</ul>
+			</ul>
+		<h3>Classe préparatoire (2015-2017) </h3>
+			<ul>
+				<li><strong>Mathematiques :</strong></li>
+					<ul>
+						<li>Algèbre linéaire</li>
+						<li>Espace vectoriel normé en dimensions finies</li>
+						<li>Espace Euclidien</li>
+						<li>Fonctions vectorielles et arcs paramétrés</li>
+						<li>Probabilités</li>
+						<li>Calcul différentiel</li>
+					</ul>
+				<li><strong>Physique :</strong></li>
+					<ul>
+						<li>Optique non linéaire</li>
+						<li>Électromagnétisme</li>
+						<li>Mécanique</li>
+						<li>Thermodynamique</li>
+						<li>Physique des ondes</li>
+					</ul>
+				<li><strong>Chimie :</strong></li>
+					<ul>
+						<li>Mélanges et transformations: aspects thermodynamiques</li>
+						<li>Énergie chimique et énergie électrique: conversion et stockage</li>
+						<li>Atomes, molécules, complexes: modélisation quantique et réactivité</li>
+						<li>Molécules et matériaux organiques : stratégies de synthèse et applications</li>
+					</ul>
+				<li><strong>Informatique :</strong></li>
+					<ul>
+						<li>Introduction à Python</li>
+						<li>Introduction aux bases de données (mySQL)</li>
+						<li>Modélisation physique</li>
+						<li>Programmation récursive</li>
+					</ul>
+			</ul>
 	</div><!-- /.blurb -->
 
