--- a/index.html
+++ b/index.html
@@ -23,111 +23,92 @@ title: Cyril MOINEAU
 					I am studying at <a href="http://www.enssat.fr/">ENSSAT Lannion</a>, a French engineering school. Parallely, I am also preparing a second diploma in research in computer science at the <a href="https://www.univ-rennes1.fr/">University of Rennes 1</a>. I am currently in an end study internship in the <a href="http://www-shaman.irisa.fr/">Shaman</a> Team under the supervision of <a href="http://people.irisa.fr/Gregory.Smits/"> Gregory Smits</a>.
 				</p>
 			</div>
-
 		</div>
 		<h2>Education</h2>
 		
-		<h3>M2SIF Rennes 1 (2019-2020) 
-			<i id="1_show" class="fa fa-arrow-circle-down" aria-hidden="true" onclick="document.getElementById('msif').style.display='block';document.getElementById('1_hide').style.display='initial';document.getElementById('1_show').style.display='none';"></i> 
-
-			<i id="1_hide" class="fa fa-arrow-circle-up" aria-hidden="true" onclick="document.getElementById('msif').style.display='none';document.getElementById('1_hide').style.display='none';document.getElementById('1_show').style.display='initial';" style="display:none;"></i></h3>
-			<div id="msif" style="display:none;">
-				<ul>
-					<li>Data mining and visualisation</li>
-					<li>Data analysis and probabilistic modeling</li>
-					<li>Writting of scientific publications</li>
-				</ul>
-			</div>
-			<h3>ENSSAT (2017-2020) 
-			<i id="2_show" class="fa fa-arrow-circle-down" aria-hidden="true" onclick="document.getElementById('enssat').style.display='block';document.getElementById('2_hide').style.display='initial';document.getElementById('2_show').style.display='none';"></i> 
-
-			<i id="2_hide" class="fa fa-arrow-circle-up" aria-hidden="true" onclick="document.getElementById('enssat').style.display='none';document.getElementById('2_hide').style.display='none';document.getElementById('2_show').style.display='initial';" style="display:none;"></i></h3>
-			<div id="enssat" style="display:none;">
-				<ul>
-					<li><strong>Mathematics :</strong>
-						<ul>
-							<li>Mathematical logic</li>
-							<li>Analysis</li>
-							<li>Algebra</li>
-							<li>Continuous and discrete analysis</li>
-							<li>Probability</li>
-							<li>Statistics</li>
-							<li>Theory of queues</li>
-							<li>Cryptography</li>
-						</ul>
-					<li><strong>Computer science :</strong>
-						<ul>
-							<li>Networking</li>
-							<li>Operating System</li>
-							<li>Basis of C</li>
-							<li>Basis of Java</li>
-							<li>Algorithmics</li>
-							<li>Data structure</li>
-							<li>Oriented Object Programing</li>
-							<li>Software engineering</li>
-							<li>Real time</li>
-							<li>Distributed algorithms</li>
-							<li>Unix programming</li>
-							<li>Relational Databases</li>
-							<li>Advanced Databases (fuzzy logic)</li>
-							<li>Theory of Languages and Compilation</li>
-							<li>Computability</li>
-							<li>Client / Server Web Programming</li>
-							<li>Web Services</li>
-							<li>Security of software systems</li>
-							<li>Declarative and functionnal programming</li>
-							<li>Machine learning</li>
-							<li>Web Data Management</li>
-							<li>Big data mining and analysis (semantic web)</li>
-							<li>Automatic processing of languages and speech</li>
-						</ul>
-					<li><strong>Electronics :</strong>
-						<ul>
-							<li>Microcontrollers</li>
-							<li>Basic digital systems</li>
-						</ul>
-				</ul>
-			</div>
-			<h3>Preparatory classes (2015-2017) 
-			<i id="3_show" class="fa fa-arrow-circle-down" aria-hidden="true" onclick="document.getElementById('prep').style.display='block';document.getElementById('3_hide').style.display='initial';document.getElementById('3_show').style.display='none';"></i> 
-
-			<i id="3_hide" class="fa fa-arrow-circle-up" aria-hidden="true" onclick="document.getElementById('prep').style.display='none';document.getElementById('3_hide').style.display='none';document.getElementById('3_show').style.display='initial';" style="display:none;"></i></h3>
-			<div id="prep" style="display:none;">
-				<p>
-					I studied in a French preparatory class from 2015-2017. You can find the syllabus <a href='https://www.optimalsupspe.fr/pc/'>here</a> (in French).
-				</p>
-				<ul>
-					<li><strong>Mathematics :</strong></li>
-						<ul>
-							<li>Linear algebra</li>
-							<li>Normed vectorial space in finite dimension</li>
-							<li>Euclidean space</li>
-							<li>Vector function and parametric equation of the curve</li>
-							<li>Probability</li>
-							<li>Diffential calculus</li>
-						</ul>
-					<li><strong>Physics :</strong></li>
-						<ul>
-							<li>Non-linear optics</li>
-							<li>Electromagnetism</li>
-							<li>Mechanic</li>
-							<li>Thermodynamic</li>
-							<li>Wave physics</li>
-						</ul>
-					<li><strong>Chemistry :</strong></li>
-						<ul>
-							<li>Mixtures and transformations: thermodynamic aspects</li>
-							<li>Chemical energy and electrical energy: conversion and storage</li>
-							<li>Atoms, molecules, complexes: quantum modeling and reactivity</li>
-							<li>Molecules and organic materials: synthesis strategy and applications</li>
-						</ul>
-					<li><strong>Computer science :</strong></li>
-						<ul>
-							<li>Introduction to Python</li>
-							<li>Introduction to data base (mySQL)</li>
-							<li>Physic modelistation</li>
-							<li>Recursive programming</li>
-						</ul>
-				</ul>
-			</div>
+		<h3>M2SIF Rennes 1 (2019-2020)</h3>
+			<ul>
+				<li>Data mining and visualisation</li>
+				<li>Data analysis and probabilistic modeling</li>
+				<li>Writting of scientific publications</li>
+			</ul>
+		<h3>ENSSAT (2017-2020)</h3>
+			<ul>
+				<li><strong>Mathematics :</strong>
+					<ul>
+						<li>Mathematical logic</li>
+						<li>Analysis</li>
+						<li>Algebra</li>
+						<li>Continuous and discrete analysis</li>
+						<li>Probability</li>
+						<li>Statistics</li>
+						<li>Theory of queues</li>
+						<li>Cryptography</li>
+					</ul>
+				<li><strong>Computer science :</strong>
+					<ul>
+						<li>Networking</li>
+						<li>Operating System</li>
+						<li>Basis of C</li>
+						<li>Basis of Java</li>
+						<li>Algorithmics</li>
+						<li>Data structure</li>
+						<li>Oriented Object Programing</li>
+						<li>Software engineering</li>
+						<li>Real time</li>
+						<li>Distributed algorithms</li>
+						<li>Unix programming</li>
+						<li>Relational Databases</li>
+						<li>Advanced Databases (fuzzy logic)</li>
+						<li>Theory of Languages and Compilation</li>
+						<li>Computability</li>
+						<li>Client / Server Web Programming</li>
+						<li>Web Services</li>
+						<li>Security of software systems</li>
+						<li>Declarative and functionnal programming</li>
+						<li>Machine learning</li>
+						<li>Web Data Management</li>
+						<li>Big data mining and analysis (semantic web)</li>
+						<li>Automatic processing of languages and speech</li>
+					</ul>
+				<li><strong>Electronics :</strong>
+					<ul>
+						<li>Microcontrollers</li>
+						<li>Basic digital systems</li>
+					</ul>
+			</ul>
+		<h3>Preparatory classes (2015-2017)</h3>
+			<ul>
+				<li><strong>Mathematics :</strong></li>
+					<ul>
+						<li>Linear algebra</li>
+						<li>Normed vectorial space in finite dimension</li>
+						<li>Euclidean space</li>
+						<li>Vector function and parametric equation of the curve</li>
+						<li>Probability</li>
+						<li>Diffential calculus</li>
+					</ul>
+				<li><strong>Physics :</strong></li>
+					<ul>
+						<li>Non-linear optics</li>
+						<li>Electromagnetism</li>
+						<li>Mechanic</li>
+						<li>Thermodynamic</li>
+						<li>Wave physics</li>
+					</ul>
+				<li><strong>Chemistry :</strong></li>
+					<ul>
+						<li>Mixtures and transformations: thermodynamic aspects</li>
+						<li>Chemical energy and electrical energy: conversion and storage</li>
+						<li>Atoms, molecules, complexes: quantum modeling and reactivity</li>
+						<li>Molecules and organic materials: synthesis strategy and applications</li>
+					</ul>
+				<li><strong>Computer science :</strong></li>
+					<ul>
+						<li>Introduction to Python</li>
+						<li>Introduction to data base (mySQL)</li>
+						<li>Physic modelistation</li>
+						<li>Recursive programming</li>
+					</ul>
+			</ul>
 	</div><!-- /.blurb -->
