Change language, 404 and css.

--- a/fr/index.html
+++ b/fr/index.html
@@ -8,7 +8,7 @@ title: Cyril MOINEAU
 			<h1 style="float: left;">Cyril MOINEAU</h1>
 		</div>
 		<div id="flex-container">
-			<div id="wai">
+			<div>
 				<h2>Qui suis je ?</h2>
 				<p>
 					Je suis un élève ingénieur en informatique français né en 1997. J'ai développé un intérêt pour le monde de la recherche depuis que je suis en classe préparatoire. Je veux que mon travail soit utile et je suis passioné par la recherche de solutions.
