--- a/index.html
+++ b/index.html
@@ -7,17 +7,16 @@ title: Cyril MOINEAU
 			<img src="/ressources/Cyril.jpg" alt="A photo of me"  style="float:right; width: 8em; height: 9.5em; margin-left: 30px; margin-right: 15%; border-radius: 5%; box-shadow: 2px 0px 6px black;">
 			<h1 style="float: left;">Cyril MOINEAU</h1>
 		</div>
-
-		
 		<div id="flex-container">
-			<div id="wai">
+			<div>
 				<h2>Who am I ?</h2>
-				<p>
-					I am a French engineer student in computer science born in 1997. Since my preparatory class, I have been curious about the world of research. 
-					I am interrested in the field of machine learning and data mining. But I am also found of physic and I love to learn new things in general !
-					</br>
-					I want to know what I am working for, and I am passionate about research. Due to my formation as an engineer, I also want to work for a company. This is why I would like to do applied research.
-				</p>
+					<p>
+						I am a French engineer student in computer science born in 1997. Since my preparatory class, I have been curious about the world of research. 
+						I am interrested in the field of machine learning and data mining. But I am also found of physic and I love to learn new things in general !
+						</br>
+						I want to know what I am working for, and I am passionate about research. Due to my formation as an engineer, I also want to work for a company. This is why I would like to do applied research.
+					</p>
+
 				<h2>Currently</h2>
 				<p>
 					I am studying at <a href="http://www.enssat.fr/">ENSSAT Lannion</a>, a French engineering school. Parallely, I am also preparing a second diploma in research in computer science at the <a href="https://www.univ-rennes1.fr/">University of Rennes 1</a>. I am currently in an end study internship in the <a href="http://www-shaman.irisa.fr/">Shaman</a> Team under the supervision of <a href="http://people.irisa.fr/Gregory.Smits/"> Gregory Smits</a>.
