Visual update for work experience section.

--- a/internship/fr/index.html
+++ b/internship/fr/index.html
@@ -5,34 +5,35 @@ title: Cyril MOINEAU
 	<div class="blurb">
 		<h1>Mon expérience professionnelle</h1>
 		<h2 style="text-align: left">Sommaire :</h2>
-		<ul>
+		<ul class="summary">
 			<li><a href="#irisa">Stage dans l'équipe SHAMAN de l'IRISA 2020</a></li>
 			<li><a href="#NCTU">Stage à la NCTU 2019</a></li>
 			<li><a href="#Metropole">Orléans Métropole 2018</a></li>
 			
 		</ul>
-		<!--
-			Mettre un format
-			- date de début
-			- date de fin
-			- entreprise
-			- lieux
-			- description du poste
-			- conclusion
-			--->
-		
-		<h2 id="irisa">Stage au sein de l'équipe SHAMAN de l'IRISA 2020</h2>
+	<div class="box">
+		<h2 id="irisa">Stage dans l'équipe SHAMAN de l'IRISA 2020</h2>
+		<img class="center "src="../../ressources/irisa.jpg" style="width: 14em; height: 4em; box-shadow: 2px 0px 6px black;">
+			<h3>Informations générales</h3>
+			<ul>
+				<li><b>Date de début :</b> Novembre 2019</li>
+				<li><b>Date de fin :</b> Juillet 2020</li>
+				<li><b>Durée :</b> 8 mois</li>
+				<li><b>Entreprise :</b> <a href="http://www.irisa.fr/">IRISA</a></li>
+				<li><b>Lieux :</b> Lannion, France</li>
+				<li><b>Aptitudes développées :</b> Python, Recherche, Rédaction, Logique Floue, IA Symbolique, Flask, Docker</li>
+			</ul>
 			<h3>Description du poste :</h3>
 			<p>
 
-				Dans le cadre de mon stage de fin d'étude, j'ai travaillé dans les laboratoires de <a href="http://www.irisa.fr/"></a>l'IRISA</a>, au sein de l'équipe <a href="http://www-shaman.irisa.fr/">SHAMAN</a>.
+				Dans le cadre de mon stage de fin d'étude, j'ai travaillé dans les laboratoires de <a href="http://www.irisa.fr/">l'IRISA</a>, au sein de l'équipe <a href="http://www-shaman.irisa.fr/">SHAMAN</a>.
 				L'objectif de ce stage était d'améliorer une méthode de génération de résumés linguistiques d'une base de données massive. 
 				Un résumé linguistique correspond à un ensemble de propriétés floues, par exemple : "La plupart des corbeaux sont noirs". 
 				Pour générer ce genre de résumé, les approches classiques ont une complexité linéaire en fonction de la taille de la 
 				base de données et exponentielle en fonction de la taille du vocabulaire. L'équipe <a href="http://www-shaman.irisa.fr/">SHAMAN</a> a proposé de s'appuyer sur 
 				des méta-données stockées par les Systèmes de Gestion de Base de Données pour éviter le parcours séquentiel de la base de 
-				données. Leur méthode est parfaite dans le cas où les propriétés à étudier sont atomique, mais perfectible dans le cas d'une 
-				cononction de propriété (par exemple: "La plupart des corbeaux sont noirs et grands").
+				données. Leur méthode est parfaite dans le cas où les propriétés à étudier sont atomiques, mais perfectible dans le cas d'une 
+				conjonctions de propriété (par exemple: "La plupart des corbeaux sont noirs <b>et</b> grands").
 			</p>
 			<p>
 
@@ -52,8 +53,20 @@ title: Cyril MOINEAU
 				Ces conditions de travail m'ont permis de développer mon autonomie et de découvrir le monde du télé-travail. 
 				J'ai aussi découvert de nouvelles problèmatiques inhérentes au travail de chercheur telles que la reproductibilité des résultats d'un article scientifique. 
 			</p>
-
+	</div>
+	<div class="box">
 		<h2 id="NCTU">Stage à la NCTU 2019</h2>
+		<img class="center "src="../../ressources/NCTU.jpg" style="width: 8em; height: 8em; border-radius: 50%; box-shadow: 2px 0px 6px black;">
+
+			<h3>Informations générales</h3>
+			<ul>
+				<li><b>Date de début :</b> Juin 2019</li>
+				<li><b>Date de fin :</b> Août 2019</li>
+				<li><b>Durée :</b> 2 mois</li>
+				<li><b>Entreprise :</b> <a href="https://www.nctu.edu.tw/en/">National Chiao Tung University</a></li>
+				<li><b>Lieux :</b> Hsinchu, Taïwan</li>
+				<li><b>Aptitudes développées :</b> Python, Keras, Anglais</li>
+			</ul>
     		<h3>Description du poste :</h3>
     		<p>
     			Pendant l'été 2019, j'ai passé 2 mois à la <a href="https://www.nctu.edu.tw/en/">National Chiao Tung University</a> (NCTU) à Taïwan dans le laboratoire <a href="http://soc.ee.nctu.edu.tw/">Intelligent Electronics and System-On-Chip</a> (IESOC).
@@ -71,9 +84,20 @@ title: Cyril MOINEAU
 				Même si la thématique du stage ne tombait pas dans celle que j'ai pu aborder lors de mes études, j'étais avide d'apprendre et d'appréhender ce sujet. 
 				Ces deux mois ont confirmé mon désir de faire de la recherche.
     		</p>
+	</div>		
+	<div class="box">
+		<h2 id="Metropole">Orléans Métropole 2018</h2>
+		<img class="center "src="../../ressources/orleans_metropole.jpg" style="width: 8em; height: 8em; box-shadow: 2px 0px 6px black;">
 
-
-    	<h2 id="Metropole">Orléans Métropole 2018</h2>
+			<h3>Informations générales</h3>
+			<ul>
+				<li><b>Date de début :</b> Juillet 2018</li>
+				<li><b>Date de fin :</b> Août 2018</li>
+				<li><b>Durée :</b> 2 mois</li>
+				<li><b>Entreprise :</b> <a href="http://www.orleans-metropole.fr/">Orléans Métropole</a></li>
+				<li><b>Lieux :</b> Orléans, France</li>
+				<li><b>Aptitudes développées :</b> Shell Script, Réseaux, Linux</li>
+			</ul>
     	    <h3>Description du poste :</h3>
     		<p>J'ai passé 2 mois lors de l'été 2018 à la <a href="http://www.orleans-metropole.fr/">Métropole d'Orléans</a> dans la direction des systèmes d'information (DSI). Pendant cet été, j'ai pu travailler sur les deux sujets suivants.
     		</p>
@@ -88,7 +112,6 @@ title: Cyril MOINEAU
 				Ce fut mon premier stage technique, il m'a permis de découvrir beaucoups dans le domaine de la gestion de réseau et de découvrir le monde du travail. 
 				On m'a par ailleurs donné de nombreuses responsabilités, notamment lors du nettoyage de l'Active Directory. 
 				Où la suppression d'un utilisateur actif aurait été pénalisante pour l'entreprise.  
-			</p>
-			
-
+			</p>		
+	</div>
 	</div><!-- /.blurb -->
