--- a/internship/index.html
+++ b/internship/index.html
@@ -9,13 +9,27 @@ title: Cyril MOINEAU
 		<ul>
 			<li><a href="#irisa">Internship in the team SHAMAN of the IRISA 2020</a></li>
 			<li><a href="#NCTU">Internship at the NCTU 2019</a></li>
-    		<li><a href="#Metropole">Orléans Métropole 2018</a></li>
+			<li><a href="#Metropole">Orléans Métropole 2018</a></li>
 		</ul>
 		
+	<div class="box">
 		<h2 id="irisa">Internship in the team SHAMAN of the IRISA 2020</h2>
+		<img class="center "src="../ressources/irisa.jpg" style="width: 14em; height: 4em; box-shadow: 2px 0px 6px black;">
+
+		<h3>General informations</h3>
+		<ul>
+			<li><b>Beginning date :</b> November 2019</li>
+			<li><b>Ending date :</b> July 2020</li>
+			<li><b>Duration :</b> 2 months</li>
+			<li><b>Company :</b> <a href="http://www.irisa.fr/"></a>IRISA</a></li>
+			<li><b>Location :</b> Lannion, France</li>
+			<li><b>Skills developed :</b> Python, Research, Redaction, Fuzzy Logic, Symbolic AI</li>
+			
+		</ul>
+	
 		<h3>Description of the internship :</h3>
 		<p>
-			As part of my final year internship, I worked at <a href="http://www.irisa.fr/"></a>IRISA</a>'s laboratory in the team <a href="http://www-shaman.irisa.fr/">SHAMAN</a>.
+			As part of my final year internship, I worked at <a href="http://www.irisa.fr/"></a>IRISA</a>'s laboratory in the team <a href="http://www-shaman.irisa.fr/">SHAMAN</a> under the supervision of <a href="http://people.irisa.fr/Gregory.Smits/">Grégory SMITS</a>.
 			The goal of the internship was to improve a method to generate linguistic summaries of a big database.
 			A linguistic summary is a set of fuzzy properties such as "most crow are black".
 			To generate such a summary, the classic approach requires to go through the whole database, which results in a linear complexity depending of the size of the database. 
@@ -38,35 +52,66 @@ title: Cyril MOINEAU
 			Due to the COVID-19 epidemy, I had to work mostly from home. This gave me the opportunity to develop my autonomy and to telecommute for the first time.
 			I have also discovered some underlying problematics of the reasearch world, such as the reproductiblity of the results of scientific papers.
 		</p>
+	</div>
+	<div class="box">
+		<h2 id="NCTU">Internship at the NCTU 2019</h2>
+		<img class="center "src="../ressources/NCTU.jpg" style="width: 8em; height: 8em; border-radius: 50%; box-shadow: 2px 0px 6px black;">
 
-    	<h2 id="NCTU">Internship at the NCTU 2019</h2>
-    		<h3>Description of the internship :</h3>
-    		<p>
-    			During summer 2019, I spent 2 months at the <a href="https://www.nctu.edu.tw/en/">National Chiao Tung University</a> (NCTU) Taiwan in the <a href="http://soc.ee.nctu.edu.tw/">Intelligent Electronics and System-On-Chip</a> (IESOC) laboratory.
-    		</p>
+		<h3>General informations</h3>
+		<ul>
+			<li><b>Beginning date :</b> June 2019</li>
+			<li><b>Ending date :</b> August 2019</li>
+			<li><b>Duration :</b> 2 months</li>
+			<li><b>Company :</b> <a href="https://www.nctu.edu.tw/en/">National Chiao Tung University</a></li>
+			<li><b>Location :</b> Hsinchu, Taïwan</li>
+			<li><b>Skills developed :</b> Python, Keras, English</li>
+			
+		</ul>
 
-    		<p>
+		<h3>Description of the internship :</h3>
+		<p>
+			During summer 2019, I spent 2 months at the <a href="https://www.nctu.edu.tw/en/">National Chiao Tung University</a> (NCTU) Taiwan in the <a href="http://soc.ee.nctu.edu.tw/">Intelligent Electronics and System-On-Chip</a> (IESOC) laboratory.
+		</p>
+
+		<p>
+			During these 2 months, I have worked on detecting emotion using ECG (Electrocardiogram) and PPG (Photoplethysmogram) signals. For this I used CNN (convolutional neuronnal network) with the library <a href="https://keras.io/">Keras</a> (v2.24). This also made me work on issues such as peak detection and real time implementation. Indeed, at the end of the internship I had to implement my CNN on the <a href="https://developer.nvidia.com/embedded/jetson-nano-developer-kit">JetSon Nano board</a>. 
     			During these 2 months, I have worked on detecting emotion using ECG (Electrocardiogram) and PPG (Photoplethysmogram) signals. For this I used CNN (convolutional neuronnal network) with the library <a href="https://keras.io/">Keras</a> (v2.24). This also made me work on issues such as peak detection and real time implementation. Indeed, at the end of the internship I had to implement my CNN on the <a href="https://developer.nvidia.com/embedded/jetson-nano-developer-kit">JetSon Nano board</a>. 
-    		</p>
-            
-    		<h3>Conclusion :</h3>
-    		<p>
-    			This internship was a very good first experience of the world of research. I can't thank enough the people that welcomed me at the NCTU and made these two months such a beneficial experience. I have been able to understand the difficulties related to working in a research laboratory. Even if the thematic was not in the scope of what I have done at school, I was really eager to learn. These two months confirmed my desire to do research.
-    		</p>
+			During these 2 months, I have worked on detecting emotion using ECG (Electrocardiogram) and PPG (Photoplethysmogram) signals. For this I used CNN (convolutional neuronnal network) with the library <a href="https://keras.io/">Keras</a> (v2.24). This also made me work on issues such as peak detection and real time implementation. Indeed, at the end of the internship I had to implement my CNN on the <a href="https://developer.nvidia.com/embedded/jetson-nano-developer-kit">JetSon Nano board</a>. 
+		</p>
+		
+		<h3>Conclusion :</h3>
+		<p>
+			This internship was a very good first experience of the world of research. I can't thank enough the people that welcomed me at the NCTU and made these two months such a beneficial experience. I have been able to understand the difficulties related to working in a research laboratory. Even if the thematic was not in the scope of what I have done at school, I was really eager to learn. These two months confirmed my desire to do research.
+		</p>
+	</div>
+	<div class="box">
+		<h2 id="Metropole">Orléans Métropole 2018</h2>
+		<img class="center "src="../../ressources/orleans_metropole.jpg" style="width: 8em; height: 8em; box-shadow: 2px 0px 6px black;">
 
+		<h3>General informations</h3>
+		<ul>
+			<li><b>Beginning date :</b> July 2018</li>
+			<li><b>Ending date :</b> August 2018</li>
+			<li><b>Duration :</b> 2 months</li>
+			<li><b>Company :</b> <a href="http://www.orleans-metropole.fr/">Orléans Métropole</a></li>
+			<li><b>Location :</b> Orléans, France</li>
+			<li><b>Skills developed :</b> Shell Script, Network, Centreon, Linux</li>
+		</ul>
 
-    	<h2 id="Metropole">Orléans Métropole 2018</h2>
-    	    <h3>Description of the internship :</h3>
-    		<p>I spend 2 months during summer 2018 at the <a href="http://www.orleans-metropole.fr/">Orléans Métropole</a> at the Information Systems Division (ISD). This summer, I worked on two different topics.
-    		</p>
-    		<ol>
-    			<li> Establishement of a supervision using the <a href="https://www.centreon.com/en/solutions/centreon/">OS Centreon</a>. I arrived during the fusion between the services of every ISD of the metropole. In this contexte, the ISD of Orléans decided to upgrade their supervision services. During this internship I have been able to witness a real network. I have learned many things about network and virtualization.
-    		    </li>
-    			<li> Management of the Active Directory (AD). The AD of the metropole had a lot of users who were supposed to be gone. My work was to found these users and to remove them. This project was really interresting since I had to create a way to detect users who aren't supposed to have an active directory with the information given by the AD. For this I used Power Shell script.
-                </li>
-    		</ol>
-    		<h3>Conclusion :</h3>
-    		<p>
+		<h3>Description of the internship :</h3>
+		<p>I spend 2 months during summer 2018 at the <a href="http://www.orleans-metropole.fr/">Orléans Métropole</a> at the Information Systems Division (ISD). This summer, I worked on two different topics.
+		</p>
+		<ol>
+			<li> Establishement of a supervision using the <a href="https://www.centreon.com/en/solutions/centreon/">OS Centreon</a>. I arrived during the fusion between the services of every ISD of the metropole. In this contexte, the ISD of Orléans decided to upgrade their supervision services. During this internship I have been able to witness a real network. I have learned many things about network and virtualization.
+			</li>
+			<li> Management of the Active Directory (AD). The AD of the metropole had a lot of users who were supposed to be gone. My work was to found these users and to remove them. This project was really interresting since I had to create a way to detect users who aren't supposed to have an active directory with the information given by the AD. For this I used Power Shell script.
+			</li>
+		</ol>
+		<h3>Conclusion :</h3>
+		<p>
+			This was my first technical internship. I have learnt a lot, and I was given responsabilities. Most particularly for the cleaning of the AD, where a mistake could have lead to the supression of a worker's account.  
     			This was my first technical internship. I have learnt a lot, and I was given responsabilities. Most particularly for the cleaning of the AD, where a mistake could have lead to the supression of a worker's account.  
-    		</p>
+			This was my first technical internship. I have learnt a lot, and I was given responsabilities. Most particularly for the cleaning of the AD, where a mistake could have lead to the supression of a worker's account.  
+		</p>
+	</div>
 	</div><!-- /.blurb -->
