Update internship to work_expericences.

--- a/work_experiences/fr/index.html
+++ b/work_experiences/fr/index.html
@@ -16,8 +16,7 @@ title: Cyril MOINEAU
 		<img class="center "src="../../ressources/irisa.jpg" style="width: 14em; height: 4em; box-shadow: 2px 0px 6px black;">
 			<h3>Informations générales</h3>
 			<ul>
-				<li><b>Date de début :</b> Novembre 2019</li>
-				<li><b>Date de fin :</b> Juillet 2020</li>
+				<li><b>Date :</b> Novembre 2019 - Juillet 2020</li>
 				<li><b>Durée :</b> 8 mois</li>
 				<li><b>Entreprise :</b> <a href="http://www.irisa.fr/">IRISA</a></li>
 				<li><b>Lieux :</b> Lannion, France</li>
@@ -60,8 +59,7 @@ title: Cyril MOINEAU
 
 			<h3>Informations générales</h3>
 			<ul>
-				<li><b>Date de début :</b> Juin 2019</li>
-				<li><b>Date de fin :</b> Août 2019</li>
+				<li><b>Date :</b> Juin 2019 - Août 2019</li>
 				<li><b>Durée :</b> 2 mois</li>
 				<li><b>Entreprise :</b> <a href="https://www.nctu.edu.tw/en/">National Chiao Tung University</a></li>
 				<li><b>Lieux :</b> Hsinchu, Taïwan</li>
@@ -91,8 +89,7 @@ title: Cyril MOINEAU
 
 			<h3>Informations générales</h3>
 			<ul>
-				<li><b>Date de début :</b> Juillet 2018</li>
-				<li><b>Date de fin :</b> Août 2018</li>
+				<li><b>Date :</b> Juillet 2018 - Août 2018</li>
 				<li><b>Durée :</b> 2 mois</li>
 				<li><b>Entreprise :</b> <a href="http://www.orleans-metropole.fr/">Orléans Métropole</a></li>
 				<li><b>Lieux :</b> Orléans, France</li>
