--- a/work_experiences/index.html
+++ b/work_experiences/index.html
@@ -18,8 +18,7 @@ title: Cyril MOINEAU
 
 		<h3>General informations</h3>
 		<ul>
-			<li><b>Beginning date :</b> November 2019</li>
-			<li><b>Ending date :</b> July 2020</li>
+			<li><b>Date :</b> November 2019 - July 2020</li>
 			<li><b>Duration :</b> 2 months</li>
 			<li><b>Company :</b> <a href="http://www.irisa.fr/"></a>IRISA</a></li>
 			<li><b>Location :</b> Lannion, France</li>
@@ -59,8 +58,7 @@ title: Cyril MOINEAU
 
 		<h3>General informations</h3>
 		<ul>
-			<li><b>Beginning date :</b> June 2019</li>
-			<li><b>Ending date :</b> August 2019</li>
+			<li><b>Date :</b> June 2019 - August 2019</li>
 			<li><b>Duration :</b> 2 months</li>
 			<li><b>Company :</b> <a href="https://www.nctu.edu.tw/en/">National Chiao Tung University</a></li>
 			<li><b>Location :</b> Hsinchu, Taïwan</li>
@@ -90,8 +88,7 @@ title: Cyril MOINEAU
 
 		<h3>General informations</h3>
 		<ul>
-			<li><b>Beginning date :</b> July 2018</li>
-			<li><b>Ending date :</b> August 2018</li>
+			<li><b>Date :</b> July 2018 - August 2018</li>
 			<li><b>Duration :</b> 2 months</li>
 			<li><b>Company :</b> <a href="http://www.orleans-metropole.fr/">Orléans Métropole</a></li>
 			<li><b>Location :</b> Orléans, France</li>
