Visual update to the project section.

--- a/project/fr/index.html
+++ b/project/fr/index.html
@@ -4,12 +4,12 @@ title: Cyril MOINEAU
 ---
 	<div class="blurb">
 		<h1>Mes projets</h1>
-		<h2 style="text-align: left">Sommaire</h2>
+		<h2 style="text-align: left">Sommaire :</h2>
 		<ul>
     		<li><a href="#Ada">Ada Lovelace & Hackathon ENSSAT  2019</a></li>
         	<li><a href="#BomberBall">BomberBall</a></li>
     	</ul>
-
+	<div class="box">
     	<h2 id="Ada">Ada Lovelace & Hacakthon ENSSAT (2019)</h2>
     		<p>
     			Pendant ma seconde année à l'<a href="http://www.enssat.fr/">ENSSAT</a>, j'ai travaillé sur deux projets avec la même équipe d'étudiants. Ces projets s'orientaient tous deux vers l'organisation d'un concours de programmation. Vous trouverez ci-dessous une description de chaque projet, ainsi que ma contribution.
@@ -67,7 +67,8 @@ title: Cyril MOINEAU
 	    			<li>Article du <a href="https://www.letelegramme.fr/cotes-darmor/lannion/hackathon-une-appli-au-bout-de-la-nuit-18-03-2019-12235588.php">Télégramme</a></li>
 		    		
 		    	</ul>
-
+	</div>
+	<div class="box">
     	<h2 id="BomberBall">Projet BomberBall</h2>
     		<p>
     			Le projet Bomberball est un projet de Génie Logiciel. C'est l'un des projets les plus ambitieux de mes années à l'ENSSAT. Lors de ce projet, nous faisions un jeu de rôle avec les enseignants. Nous représentions une entreprise et les enseignants nos clients.
@@ -79,6 +80,7 @@ title: Cyril MOINEAU
     			Vous pouvez regarder une vidéo de présentation que nous avons réalisée pour présenter notre jeu lors de la présentation finale : 
 				</br></br>
     			<iframe class="center" width="600" height="300" src="https://www.youtube.com/embed/0CLnEmHGonU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    			</p>
+				</p>
+	</div>
 	</div><!-- /.blurb -->
 
