--- a/project/index.html
+++ b/project/index.html
@@ -4,12 +4,12 @@ title: Cyril MOINEAU
 ---
 	<div class="blurb">
 		<h1>My projects</h1>
-		<h2 style="text-align: left">Summary</h2>
+		<h2 style="text-align: left">Summary :</h2>
 		<ul>
     		<li><a href="#Ada">Ada Lovelace & Hackathon ENSSAT  2019</a></li>
         	<li><a href="#BomberBall">BomberBall</a></li>
     	</ul>
-
+	<div class="box">
     	<h2 id="Ada">Ada Lovelace & Hacakthon ENSSAT (2019)</h2>
     		<p>
     			During my 2nd year at <a href="http://www.enssat.fr/">ENSSAT</a>, I worked on two projects with the same team of students. These projects revolved around fulfilling a challenge in programming. Bellow, you will find a description of both projects followed by an explanation of my part in them.
@@ -65,17 +65,18 @@ title: Cyril MOINEAU
 	    			<li>Article from the <a href="https://www.letelegramme.fr/cotes-darmor/lannion/hackathon-une-appli-au-bout-de-la-nuit-18-03-2019-12235588.php">Télégramme</a></li>
 		    		
 		    	</ul>
-
-    	<h2 id="BomberBall">Projet BomberBall</h2>
+	</div>
+	<div class="box">
+    	<h2 id="BomberBall">BomberBall</h2>
     		<p>
-    			Bomber Ball project was an important project for software engineering course. During this project, we were role playing a company and the professors were playing the client. 
+    			Bomber Ball was an important project for software engineering course. During this project, we were role playing a company and the professors were playing the client. 
     			During this project we respond to a call for tender, and create various meetings with our fictive company in order to respond to the fictive client's demand. The company wanted to create a video game similar to the Bomber Man. We had to code the game in Java since it was the language we used the most in junior year at ENSSAT.
     		</p>
     		
     		<h3>The result :</h3>
     			<p>You can see the project on my github account <a href="https://github.com/cmoineau/GL-BomberBall">here</a>.
     			And here you can watch a small video we made to show the result during the final presentation :
-    			</br></br>
-    			<iframe class="center" width="600" height="300" src="https://www.youtube.com/embed/0CLnEmHGonU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    			</p>
+    			<iframe style="padding-top: 1em;" class="center" width="600" height="300" src="https://www.youtube.com/embed/0CLnEmHGonU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</p>
+	</div>
 	</div><!-- /.blurb -->
